--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Goals</title>
 
+
     <style>
+      body {
+        background-image: url(playing2.gif);
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: right;
+        z-index: 0
+      }
+
       .title {
         position: absolute;
-        top: -40px;
+        top: -100px;
         transform: skew(20deg);
         font-size: 200px;
       }
@@ -16,15 +25,16 @@
       .goalslist {
         margin: 20px auto;
         position: absolute;
-        top: 300px;
-        left: 200px;
+        top: 220px;
+        left: 220px;
         transform: skew(20deg);
         font-size: 50px;
       }
+
       .completed {
-      text-decoration: line-through;
-      color: #888;
-    }
+        text-decoration: line-through;
+        color: #888;
+      }
     </style>
   </head>
   <body>
