keeping crossing out technique

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
 
-    <h1 class="title">goals</h1>
+    <h1 class="title">goals !</h1>
     <ul class="goalslist">
       <li id="goal1"> buy a bass </li>
       <li id="goal2"> buy an amp + cord </li>
@@ -55,13 +55,31 @@
       </li>
     </ul>
     <script>
+    document.addEventListener('DOMContentLoaded', function () {
       const goalsList = document.querySelectorAll('.goalslist li');
 
+      // Load the completion state from localStorage
       goalsList.forEach(goal => {
-        goal.addEventListener('click', function() {
+        const goalId = goal.id;
+        const isCompleted = localStorage.getItem(goalId) === 'true';
+
+        if (isCompleted) {
+          goal.classList.add('completed');
+        }
+      });
+
+      // Add click event listeners to toggle completion state
+      goalsList.forEach(goal => {
+        goal.addEventListener('click', function () {
           this.classList.toggle('completed');
+          const goalId = this.id;
+          const isCompleted = this.classList.contains('completed');
+          
+          // Save the completion state to localStorage
+          localStorage.setItem(goalId, isCompleted);
         });
       });
-    </script>
+    });
+  </script>
   </body>
 </html>
